[sf-start] 03-twig : List movies

--- a/templates/movie/list.html.twig
+++ b/templates/movie/list.html.twig
@@ -19,7 +19,7 @@
                                 </p>
                                 <a href="/movies/{{ movie.slug }}">Voir plus</a>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <small class="text-muted">{{ movie.year }}</small>
+{#                                    <small class="text-muted">{{ movie.year }}</small>#}
                                 </div>
                             </div>
                         </div>
